interface login + saibamais

--- a/Página Inicial/homepage.html
+++ b/Página Inicial/homepage.html
@@ -14,7 +14,7 @@
     <p>Escolha uma opção abaixo para continuar:</p>
     <button class="btn btn-resgate" onclick="window.location.href='../Login_Padrao.php'">Preciso de resgate</button>
     <button class="btn btn-ajudar" onclick="window.location.href='../Login_Vol.php'">Desejo ajudar</button>
-    <p><a href="../saiba_mais.html">Saiba mais</a></p>
+    <p><a href="../saibamais/saiba_mais.html">Saiba mais</a></p>
   </div>
 
   <footer class="rodape">
