--- a/saibamais/saiba_mais.html
+++ b/saibamais/saiba_mais.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #b0c5ad;
+            background-color: rgb(226, 216, 216);
             color: #333;
         }
 
