--- a/PaginaInicial/homepage.html
+++ b/PaginaInicial/homepage.html
@@ -12,8 +12,8 @@
   <div class="container">
     <h1>Bem-vindo ao <span class="titulo-destaque">SalvaMais</span></h1>
     <p>Escolha uma opção abaixo para continuar:</p>
-    <button class="btn btn-resgate" onclick="window.location.href='../Login_Padrao.php'">Preciso de resgate</button>
-    <button class="btn btn-ajudar" onclick="window.location.href='../Login_Vol.php'">Desejo ajudar</button>
+    <button type="button "class="btn btn-resgate" onclick="window.location.href='../Entrar.php'">Preciso de resgate</button>
+    <button type="button" class="btn btn-ajudar" onclick="window.location.href='../Entrar.php'">Desejo ajudar</button>
     <p><a href="../saibamais/saiba_mais.html">Saiba mais</a></p>
   </div>
 
